2014-07-20 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-stdarg-4.c:
	* support/regression/tests/gcc-torture-execute-loop-2c.c:
	* support/regression/tests/gcc-torture-execute-unroll-1.c:
	  Add "static" to fit the C99 standard.

2014-07-19 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-20001121-1.c:
	  Add "static" to fit the C99 standard.

2014-07-15 Molnar Karoly <molnarkaroly AT users.sf.net>
	* src/stm8/peep.c
	  Make calculation of instructions' length more accurate.

2014-07-14 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/non-free/include/pic14/pic16f1yyy.h:
	  Added the missing DEBUG config option to the enhanced midrange MCUs.

2014-07-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug2084206.c:
	  Enable test, since #2198 is fixed.
	* support/regression/tests/gcc-torture-execute-20030714-1.c:
	  Reference bug #2285.

2014-07-12 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/cinc2h.pl: Bugfix and update.

	* device/non-free/include/pic14/pic16c433.h: bugfix

2014-07-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt,
	  device/include/pic14/pic16regs.h,
	  device/non-free/include/pic14/pic12lf1554.h,
	  device/non-free/include/pic14/pic12lf1559.h,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/pic12lf1554.c,
	  device/non-free/lib/pic14/libdev/pic12lf1559.c,
	  doc/sdccman.lyx:
	  New devices.

2014-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Remove workarounds for bug #2198.

2014-07-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/linksrc/lkrloc3.c (adb_hi, adb_lo, relr3),
	  sdas/asxxsrc/asout.c (outrxb): back port some of ASxxxx 5.06 to
	  fix bug 2198

2014-07-08 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/non-free/include/pic14/pic1xxx.h,